# axum_examples

./: README.md
async_graphql/: Cargo.toml
hello_world/: Cargo.toml
hello_world/src/: main.rs
photo_share_api/: Cargo.toml
photo_share_api/src/: handlers.rs  main.rs  model.rs
photo_share_api/src/model/: mod.rs  photo.rs  schema.rs
realworld-axum-sqlx/: Cargo.toml
realworld-axum-sqlx/migrations/: 20220711165144_create_table.sql
realworld-axum-sqlx/src/: main.rs
realworld-axum-sqlx/src/http/: follows.rs  mod.rs  users.rs
realworld-axum-sqlx/src/http/articles/: mod.rs
realworld-axum-sqlx/src/http/users/: mod.rs
sql-examples/: Cargo.toml
sql-examples/migrations/: 20220722185937_setup.sql
sql-examples/src/: main.rs
sql-examples/src/select/: distinct.rs  mod.rs  order_by.rs
sql-examples/src/where_/: any_all.rs  between.rs  in_.rs  like.rs  mod.rs
starwars/: Cargo.toml
todo/: Cargo.toml
todo/src/: main.rs
todo_graphql/: Cargo.toml
todo_graphql_sqlx_postgres/: Cargo.toml
todo_graphql_sqlx_postgres/src/: main.rs
todo_graphql_sqlx_postgres/src/todo/: mod.rs
todo_sqlx_postgres/: Cargo.toml
todo_sqlx_postgres/migrations/: 20220311114546_create_table.sql  20220311125345_create_table.sql
todo_sqlx_postgres/src/: main.rs
todo_v2/: Dockerfile  Makefile
