[package]
name = "photo_share_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.4"
async-graphql-axum = "4.0.4"
axum = "0.5.9"
tokio = { version = "1.19.2", features = ["full"] }
