[package]
name = "realworld-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
env_logger = "0.9.0"
log = "0.4.17"
sqlx = { version = "0.6.0", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
