[package]
name = "sql-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.0", features = ["runtime-async-std-native-tls", "postgres", "uuid"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
