[package]
name = "todo_sqlx_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
